--- a/My Business Card/index.html
+++ b/My Business Card/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Business Card</title>
-    <link rel="stylesheet" href="card.css" />
+    <title>Business card</title>
+    <link rel="stylesheet" href="Businesscard.css" />
   </head>
   <body>
     <div class="business-card">
